fixes flex wrapping bug for project cards

--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,12 @@
 
 .project-container {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  width: 100%;
-  max-width: 1200px;
+  /* width: 100%; */
+  /* max-width: 1200px; */
   padding: 10px 20px;
   box-sizing: border-box;
 }
