--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -6,8 +6,9 @@
   max-height: 360px;
   /* padding: 2px 2px; */
   box-sizing: border-box;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  position: relative;
   /* border-radius: 10px; */
   /* background-image: linear-gradient(
     to right,
@@ -21,8 +22,14 @@
 .project-title {
   font-size: 1.5em;
   /* margin: 0.67em 0; */
-  background-color: #f5f5f5;
+  background-color: #d6d6d6a5;
   width: 40%;
+  position: absolute;
+  bottom: 0;
+  left: 20px;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 .project-image {
   width: 640px;
@@ -33,4 +40,16 @@
   /* margin: 10px; */
   justify-content: center;
   display: flex;
+  /* position: relative; */
+}
+
+.project-image hover::after {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 640px;
+  height: 360px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
 }
